objects/CaseComments__x.object
<CustomObject>
    <description>CaseComments</description>
    <externalDataSource>Acorn_OData</externalDataSource>
    <externalName>CaseComments</externalName>
    <fields>
        <fullName>AcornIssueId__c</fullName>
        <description>AcornIssueId</description>
        <externalDeveloperName>AcornIssueId</externalDeveloperName>
        <label>AcornIssueId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CaseId</description>
        <externalDeveloperName>CaseId</externalDeveloperName>
        <label>CaseId</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CaseComments</relationshipLabel>
        <relationshipName>CaseComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <description>CaseNumber</description>
        <externalDeveloperName>CaseNumber</externalDeveloperName>
        <label>CaseNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelType__c</fullName>
        <description>ChannelType</description>
        <externalDeveloperName>ChannelType</externalDeveloperName>
        <label>ChannelType</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentId__c</fullName>
        <description>CommentId</description>
        <externalDeveloperName>CommentId</externalDeveloperName>
        <label>CommentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comment</description>
        <externalDeveloperName>Comment</externalDeveloperName>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <description>CreatedBy</description>
        <externalDeveloperName>CreatedBy</externalDeveloperName>
        <label>CreatedBy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IssueTrackingNumber__c</fullName>
        <description>IssueTrackingNumber</description>
        <externalDeveloperName>IssueTrackingNumber</externalDeveloperName>
        <label>IssueTrackingNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkflowAction__c</fullName>
        <description>WorkflowAction</description>
        <externalDeveloperName>WorkflowAction</externalDeveloperName>
        <label>WorkflowAction</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkflowTeamUser__c</fullName>
        <description>WorkflowTeamUser</description>
        <externalDeveloperName>WorkflowTeamUser</externalDeveloperName>
        <label>WorkflowTeamUser</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>CaseComments</label>
    <pluralLabel>CaseComments</pluralLabel>
</CustomObject>